--- a/CryptoBlog/package.json
+++ b/CryptoBlog/package.json
@@ -7,5 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pavel Romanov",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "express-sessions": "^1.0.6",
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.0.5",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
+  }
 }
